# htrackWithOpenposeContribution

./: .gitattributes  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
apps/: CMakeLists.txt
apps/colorpick/: Makefile  cmake_install.cmake
apps/helloworld/: s.cpp
apps/helloworld_cublas/: CMakeLists.txt  hello.cpp  main_performance.cpp
apps/helloworld_cudagl/: main.cpp
apps/helloworld_libfreenect/: CMakeLists.txt  main.cpp
apps/htrack_atb/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
apps/htrack_qt/: CMakeLists.txt  Makefile  OpenGL_viewer.cpp  cmake_install.cmake  main.cpp  moc_Main_window.cpp_parameters  moc_OpenGL_viewer.cpp_parameters
cmake/: ConfigureCUDA.cmake  ConfigureCompiler.cmake  ConfigureKinect.cmake  ConfigureSensor.cmake
cudax/: Makefile  cmake_install.cmake  kernel_upload.h
tracker/: Makefile  Worker.cpp  Worker.h  cmake_install.cmake
tracker/Data/: Camera.cpp  Camera.h  DataFrame.h  DataStream.cpp  DataStream.h
tracker/Detection/: FindFingers.cpp  FindFingers.h  QianDetection.cpp
tracker/Energy/: Fitting.cpp  Wrist.cpp  Wrist.h  Wristband.cpp
tracker/HandFinder/: HandFinder.cpp  HandFinder.h
tracker/OpenGL/CylindersRenderer/: Cylinders_renderer.cpp
tracker/Sensor/: Sensor.h  Sensor_libfreenect.cpp
util/: Makefile  cmake_install.cmake
